--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
 
       - name: Semantic Release
         env:
-          GITHUBTOKEN: ${{ secrets.GHTOKEN }}
-          NPMTOKEN: ${{ secrets.NPMTOKEN }}
+          GITHUB_TOKEN: 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
+          NPM_TOKEN: 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
         run: npx semantic-release
