--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
 
       - name: Semantic Release
         env:
-          GH_TOKEN: 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
+          GHTOKEN: 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
           NPM_TOKEN: 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
         run: npx semantic-release
